roco-gen/tests/templates/snapshots/generate[views_[show]]@Htmx_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
snapshot_kind: text
---
{% extends "base.html" %}

{% block title %}
View movie: {{ item.id }}
{% endblock title %}

{% block page_title %}
View movie: {{ item.id }}
{% endblock page_title %}


{% block content %}
<div class="mb-10">
    <div>
    <label><b>{{"title" | capitalize }}:</b> {{item.title}}</label>
    </div>
<div>
    <label><b>{{"user_id" | capitalize }}:</b> {{item.user_id}}</label>
    </div>
<br />
<a href="/movies">Back to movies</a>
</div>
{% endblock content %}
