roco-gen/tests/templates/snapshots/generate[views_rs]@Htmx_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(base_views_path.join(\"movie.rs\")).expect(\"Failed to read mod.rs\")"
---
use roco_rs::prelude::*;

use crate::models::_entities::movies;

/// Render a list view of `movies`.
///
/// # Errors
///
/// When there is an issue with rendering the view.
pub fn list(v: &impl ViewRenderer, items: &Vec<movies::Model>) -> Result<Response> {
    format::render().view(v, "movie/list.html", data!({"items": items}))
}

/// Render a single `movie` view.
///
/// # Errors
///
/// When there is an issue with rendering the view.
pub fn show(v: &impl ViewRenderer, item: &movies::Model) -> Result<Response> {
    format::render().view(v, "movie/show.html", data!({"item": item}))
}

/// Render a `movie` create form.
///
/// # Errors
///
/// When there is an issue with rendering the view.
pub fn create(v: &impl ViewRenderer) -> Result<Response> {
    format::render().view(v, "movie/create.html", data!({}))
}

/// Render a `movie` edit form.
///
/// # Errors
///
/// When there is an issue with rendering the view.
pub fn edit(v: &impl ViewRenderer, item: &movies::Model) -> Result<Response> {
    format::render().view(v, "movie/edit.html", data!({"item": item}))
}
