roco-gen/tests/templates/snapshots/generate_result@add_column_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration `add_name_and_age_to_users` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
