roco-gen/tests/templates/snapshots/generate_result@add_reference_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration `add_user_ref_to_posts` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
