roco-gen/tests/templates/snapshots/generate_result@create_table_without_tz_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration for `movies` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
