roco-gen/tests/templates/snapshots/generate_result@empty_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration for `FixUsersTable` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
