roco-gen/tests/templates/snapshots/generate_result@remove_columns_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: collect_messages(&gen_result)
---
* Migration `remove_name_and_age_from_users` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
