roco-gen/tests/templates/snapshots/generate_results@Api_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: collect_messages(&gen_result)
---
* Migration for `movie` added! You can now apply it with `$ cargo roco db migrate && cargo roco db entities`.
* A test for model `Movies` was added. Run with `cargo test`.
* Controller `Movie` was added successfully.
* Tests for controller `Movie` was added successfully. Run `cargo test`.
